--- a/index.html
+++ b/index.html
@@ -4,8 +4,28 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>milestone1</title>
-</head>
-<body>
+
+
     
+    <link rel="stylesheet" href="mileston1.css">
+</head>
+<body style="font-family: Verdana, Geneva, Tahoma, sans-serif;">
+    <header class="h-bg">
+        <div class="block">
+            <div>
+                <h1 style="font-size: 65; font-weight: 700;
+                color: #151414;">All Thinks Are Possible If You believe</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <button class="btn1"><a href="" style="text-decoration: none;color: #FFF;">Contact Us</a></button>
+            </div>
+        </div>
+
+    </header>
+    <main>
+
+    </main>
+    <footer>
+
+    </footer>
 </body>
 </html>
