--- a/index.html
+++ b/index.html
@@ -21,8 +21,20 @@
         </div>
 
     </header>
-    <main>
-
+    <main style="margin: 0%;">
+        <section class="area1">
+            <img src="new-year-new-me/images/person.png" alt="">
+            <div style="width: 400px;">
+                <h2>My failures of previous year</h2>
+                <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <ol type="i">
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular belief, is not simply.</li>
+                </ol>
+            </div>
+        </section>
     </main>
     <footer>
 
