--- a/index.html
+++ b/index.html
@@ -35,6 +35,37 @@
                 </ol>
             </div>
         </section>
+        <section>
+            <h3 style="text-align: center;">My Plans</h3>
+            <div class="area2">
+                <div>
+                    <img src="new-year-new-me/images/icons/web.png" alt="">
+                    <h2>Web Development</h2>
+                    <p>I want to start </p>
+                </div>
+                <div>
+                    <img src="new-year-new-me/images/icons/js.png" alt="">
+                    <h2>Javascript</h2>
+                    <p>I want to learn</p>
+                </div>
+                <div>
+                    <img src="new-year-new-me/images/icons/smoke.png" alt="">
+                    <h2>Smoking Habit</h2>
+                    <p>I want to end</p>
+                </div>
+                <div>
+                    <img src="new-year-new-me/images/icons/ecom.png" alt="">
+                    <h2>Ecommerce</h2>
+                    <p>I want to develop</p>
+                </div>
+            </div>
+        </section>
+        <section>
+            <div class="area3">
+                <h2 style="color: #FFF;">Awlays keep a positive mindset</h2>
+                <button class="btn1"><a href="" style="text-decoration: none;color: #FFF;">Call Now</a></button>
+            </div>
+        </section>
     </main>
     <footer>
 
