--- a/index.html
+++ b/index.html
@@ -67,8 +67,26 @@
             </div>
         </section>
     </main>
-    <footer>
-
+    <footer class="last-step">
+        <div class="footerFlex">
+            <div style="width: 300px;">
+                <h1>Future</h1>
+                <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+                <p>Email : info@gmail.com</p>
+                <p>Phone : 01500 00 00 00</p>
+                <ul>
+                    <a href=""><li><img src="new-year-new-me/images/icons/fb.png" alt=""></li></a>
+                    <a href=""><li><img src="new-year-new-me/images/icons/twitter.png" alt=""></li></a>
+                    <a href=""><li><img src="new-year-new-me/images/icons/youtube.png" alt=""></li></a>
+                </ul>
+            </div>
+            <div>
+                <div class="subBlock">
+                    <h3>Subscribe</h3>
+                    <input type="text" placeholder="Enter Your Email" style="font-size: 24px; padding: 12px; border: none;"></div><br>
+                    <button class="btn1"><a href="" style="text-decoration: none;color: #FFF;">Submit</a></button>
+                </div>
+        </div>
     </footer>
 </body>
 </html>
